Handle serialization/deserialization of glong gulong and guint64

Long and unsigned long was properly serialized but not deserialized, guint64
handling is not ideal as the type is cast into a gint64, however this is
better than not handling the fundamental type at all.

https://bugzilla.gnome.org/show_bug.cgi?id=725972